ipc/ipdl/test/ipdl/ok/Pbytebuf.ipdl
union Foo {
    int;
    ByteBuf;
};

[ChildProc=any]
sync protocol Pbytebuf {
parent:
    async Msg(ByteBuf s, Foo f);
    sync SyncMsg(ByteBuf s, Foo f)
        returns (ByteBuf t, Foo g);
};
