ipc/ipdl/test/ipdl/error/IntrSyncManager.ipdl
include protocol IntrSyncManagee;

sync protocol IntrSyncManager {
    manages IntrSyncManagee;
parent:
    async IntrSyncManagee();
};
